--- a/Sushi-WatchKit-Control WatchKit App/Base.lproj/Interface.storyboard
+++ b/Sushi-WatchKit-Control WatchKit App/Base.lproj/Interface.storyboard
@@ -1,15 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="15400" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="15400"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Sushi_WatchKit_Control_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <button width="136" alignment="left" title="Left" id="ocn-WV-QwU">
+                            <connections>
+                                <action selector="leftButtonPressed" destination="AgC-eL-Hgc" id="uft-ay-f2X"/>
+                            </connections>
+                        </button>
+                        <button width="136" height="38" alignment="right" title="Right" id="axi-Bd-S0v">
+                            <connections>
+                                <action selector="rightButtonPressed" destination="AgC-eL-Hgc" id="7dB-10-0bg"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
             </objects>
+            <point key="canvasLocation" x="129" y="120"/>
         </scene>
     </scenes>
 </document>
